<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/background_gradient"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:id="@+id/button_calcul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="65dp"
        android:layout_marginStart="22dp"
        android:text="@string/menu_button_calculator"
        android:onClick="onClickChangeActivityToCalculator"/>

    <Button
        android:id="@+id/button_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="22dp"
        android:text="@string/menu_score_board"
        android:onClick="onClickChangeActivityToScoreBoard" />

    <Button
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button_calcul"
        android:layout_marginTop="65dp"
        android:text="@string/menu_progress_bar"
        android:onClick="onClickChangeActivityToProgressBar"/>

</RelativeLayout>